--- a/7.thiet_ke_bo_cuc_trang_web/bai_tap/style3.css
+++ b/7.thiet_ke_bo_cuc_trang_web/bai_tap/style3.css
@@ -6,13 +6,12 @@ body {
 header {
     padding: 10px;
     color: black;
-    background-color: lightgrey;
+    background-color: aqua;
 }
 
 head-link {
     padding: 0;
     color: black;
-    background-color: lightgrey;
 }
 
 head-link ul {
@@ -28,36 +27,50 @@ head-link li {
 head-link ul, li {
     width: 100%;
     height: 50px;
-    background-color: lightgrey;
+    background-color: antiquewhite;
     margin-bottom: 5px;
 }
-left-content{
-    padding: 100px;
-    width: 20%;
-    min-height: 500px;
+
+left-content {
+    padding: 10px;
+    width: 32.35%;
+    min-height: 1000px;
     background-color: antiquewhite;
     margin-bottom: 5px;
     float: left;
 }
-left-content a{
+
+left-content a {
     padding: 10px;
 }
 
-right-content{
-    padding: 100px;
-    margin-bottom: 5px ;
-    width: 53.3%;
+right-content {
+    padding: 10px;
+    margin-bottom: 5px;
+    width: 64.89%;
     min-height: 1000px;
-    background-color: red;
+    background-color: white;
     float: right;
 }
-.p{
-  padding: 10px;
+
+.p {
+    padding: 10px;
     text-align: justify;
+    font-size: 20px;
+    line-height: 38px;
 }
-footer{
-    padding: 20px;
+
+footer {
+    width: 100%;
+    padding: 10px;
     background-color: lightgrey;
     color: black;
 }
 
+.chu {
+    font-weight: bold;
+}
+
+.so {
+    color: dimgray;
+}
